# datalad-debian

./: .appveyor.yml  .gitattributes  CHANGELOG.md  MANIFEST.in  README.md  reprepro_demo.sh  requirements-devel.txt  setup.cfg  setup.py
changelog.d/templates/: new_fragment.md.j2
datalad_debian/: __init__.py  _version.py  add_distribution.py  bootstrap_builder.py  build_package.py  configure_builder.py  new_distribution.py  new_package.py  new_reprepro_repository.py  update_reprepro_repository.py  utils.py
datalad_debian/metadata/extractors/: debian_package_dataset.py
datalad_debian/resources/procedures/: cfg_debianbuilder.py  cfg_reprepro.py
datalad_debian/resources/recipes/: singularity-default  singularity-nonfree
datalad_debian/tests/: test_from_scratch.py  test_new_reprepro_repository.py  test_register.py  test_update_reprepro_repository.py  test_utils.py
docs/: Makefile
docs/source/: cmdline.rst  concepts.rst  conf.py  index.rst  modref.rst  usage.rst  walkthrough.rst  walkthrough_collab.rst
docs/source/_static/: custom.css
